crates/sql-orm/tests/ui/from_row_unit_struct.stderr
error: FromRow solo soporta structs con campos nombrados
 --> tests/ui/from_row_unit_struct.rs:4:8
  |
4 | struct UnitProjection;
  |        ^^^^^^^^^^^^^^
