crates/sql-orm/tests/ui/from_row_unit_struct.rs
use sql_orm::prelude::*;

#[derive(FromRow)]
struct UnitProjection;

fn main() {}
